# classicmenu-indicator

./: .bzrignore  .gitignore  MANIFEST.in  Makefile  NEWS.txt  PKG-INFO  README.txt  _meta.py  activate-menu  deb_setup_helpers.py  run.py  setup.cfg  setup.py
.patternbook/: attributes.json  dynamics.json  used.json
classicmenu_indicator/: __init__.py  _meta.py  about.py  cmindicator.py  config.py  dialogs.py  preferencesdlg.py  settings.py  tvtools.py  xdgdirs.py
classicmenu_indicator.egg-info/: SOURCES.txt
data/autostart/: classicmenu-indicator.desktop.in
data/desktop/: classicmenu-indicator.desktop.in
data/man/: classicmenu-indicator.1
data/menu/: extra.menu
data/ui/: preferences.ui
debian/: _rules  changelog  classicmenu-indicator.docs  classicmenu-indicator.install  classicmenu-indicator.postinst.debhelper  classicmenu-indicator.preinst.debhelper  classicmenu-indicator.prerm.debhelper  classicmenu-indicator.substvars  clean  control  copyright  files  links  rules  watch
debian/patches/: debian-changes-0.01  debian-changes-0.02  debian-changes-0.03  series
desktop/autostart/: classicmenu-indicator.desktop
make/: debian.inc  debian.inc_  debian.make  i18n.make  project.inc  project.inc_  python.inc  python.inc_  python.make
po/: POTFILES.in  am.po  ar.po  bg.po  ca.po  ckb.po  classicmenu-indicator.pot  de.po  el.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  it.po  ja.po  ko.po  ku.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sco.po  sr.po  sv.po  te.po  tr.po  uk.po  uz.po  zh_CN.po
utils/: mkicons.sh
(+15 files in other folders)
