[metadata]
name = classicmenu-indicator
version = 0.11
description = 
maintainer = Florian Diesch
maintainer_email = devel@florian-diesch.de
author = Florian Diesch
author_email = devel@florian-diesch.de
url = http://www.florian-diesch.de/software/classicmenu-indicator/
download_url = http://www.florian-diesch.de/software/classicmenu-indicator/
long_description = file: README.txt
